attempted fix for too wide hearder (at 640 and 480)

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -5343,6 +5343,10 @@ a.badge:focus {
     #formatCategories {
         display: none;
     }
+    .container{
+        width:620px;
+
+    }
   .hidden-desktop {
     display: inherit !important;
   }
@@ -6370,10 +6374,7 @@ a.badge:focus {
     overflow: visible !important;
   }
 }
-.container{
- width:760px;
 
-}
 /**
  * Basic Style overrides
  */
